<resources>
    <string name="app_name">Veronymous VPN</string>
    <string name="connect">Connect</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="select_server">Select a Server</string>
    <string name="vpn_server">VPN Server</string>
    <string name="disconnect">Disconnect</string>
    <string name="veronymous">Veronymous</string>
    <string name="select_server_title">Select Location</string>
    <string name="get_zk_creds_title">Get ZK Credentials</string>
    <string name="get_zk_creds_full_title">Get Zero-Knowledge Credentials</string>
    <string name="connecting_title">Connecting</string>
    <string name="connecting_to_location">Connecting to %s…</string>
    <string name="connected_title">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="disconnecting_title">Disconnecting</string>
    <string name="continue_title">Continue</string>
    <string name="OK">OK</string>
    <string name="invalid_email_or_password_message">Invalid email address or password. Please try again or reset password at veronymous.io.</string>
    <string name="subscription_required_message">A subscription is required to continue. Please subscribe at veronymous.io.</string>
    <string name="get_zk_creds_info">Fetch zero-knowledge credentials that will allow you to anonymously authenticate and connect to Veronymous VPN servers.</string>
    <string name="connected_info">You are connected to the VPN server and can now browse the internet securely and privately.</string>
    <string name="select_server_info">Select the VPN server location to which you want to connect.</string>
    <string name="register_message">Don\'t have an account? Click here to register.</string>
    <string name="enable_exact_alarm_title">Enable Alarms &amp; Reminders</string>
    <string name="enable_exact_alarm_message">In order for the application to work correctly, you must enable "Alarms &amp; Reminders" in the app settings.</string>
    <string name="enable">enable</string>
    <string name="enable_notifications_title">Enable Notifications</string>
    <string name="enable_notifications_message">In order for the application to work correctly, you must enable notifications in the app settings.</string>
    <string name="could_not_connect_title">Could not connect</string>
    <string name="could_not_connect_message">Could not connect to the VPN server. It\'s possible that too many devices are trying to use a single account.</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>