<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave_background_1">

    <EditText
        android:id="@+id/auth_email_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/auth_password_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/auth_email_input"
        app:layout_constraintStart_toStartOf="@+id/auth_email_input"
        app:layout_constraintTop_toBottomOf="@+id/auth_email_input" />

    <Button
        android:id="@+id/auth_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_bg_veron"
        android:text="@string/continue_title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_error_message" />

    <TextView
        android:id="@+id/auth_register_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:text="@string/register_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_input"
        app:layout_constraintStart_toStartOf="@+id/auth_password_input"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_input" />

    <TextView
        android:id="@+id/auth_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:text="@string/invalid_email_or_password_message"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/auth_password_input"
        app:layout_constraintStart_toStartOf="@+id/auth_password_input"
        app:layout_constraintTop_toBottomOf="@+id/auth_password_input" />
</androidx.constraintlayout.widget.ConstraintLayout>